syntax = "proto3";

package happendb.store;

import "event.proto";

option go_package = "github.com/happendb/happendb/proto/gen/go/store";

service ReadOnlyService {
  rpc ReadEvents(ReadEventsRequest) returns (ReadEventsResponse);
}

message ReadEventsRequest { string AggregateID = 1; }

message ReadEventsResponse {
  string AggregateID = 1;
  repeated happendb.messaging.Event events = 2;
}